--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -9,15 +9,16 @@
     <body>
         <h1>Contact</h1>
         
-        <p>Jaywei Chang 540 Slocum Drive</p>
+        <p>Jaywei Chang</p>
         <p>540 Slocum Drive</p>
         <p>Syracuse NY 13244</p>
-        <a href="mailto:jchang24@syr.edu">jchang24@syr.edu</a>
-        <a href="https://www.linkedin.com/in/jayweic">
-            <img src="images/LI-logo.png" alt="LinkedIn Logo" style="width: 40px; height: auto;">
+        <p><a href="mailto:jchang24@syr.edu">jchang24@syr.edu</a></p>
+       <p> <a href="https://www.linkedin.com/in/jayweic">
+            <img src="../images/llogo.jpg" alt="LinkedIn Logo" style="width: 80px; height: auto;">
             My LinkedIn Page
-        </a>
-     
+        </a></p>
+      <p>  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2917.1006312928143!2d-76.11701562509643!3d43.018268993266254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f49e0859719f%3A0xffb9b1ecb31983c5!2s540%20Slocum%20Dr%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1706829356746!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </p>
     </body>
 
 </html>
