--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Front End Web Development</title>
-</head>
-<style>table, th, td {border: 1px solid black;}
-</style>
+    <style>table, th, td {border: 1px solid black;}</style>
 <body>
     <table border="1">
         <caption>Technical Skills</caption> 
