--- a/lab04/skills.html
+++ b/lab04/skills.html
@@ -5,7 +5,7 @@
     <title>Front End Web Development</title>
     <style>table, th, td {border: 1px solid black;}</style>
 <body>
-    <table border="1">
+    <table>
         <caption>Technical Skills</caption> 
         <tr>
             <th>Category</th>
