--- a/project5/home.html
+++ b/project5/home.html
@@ -59,7 +59,9 @@
     }
   }
 </style>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
 
 <header class="banner">
