--- a/project5/activities.html
+++ b/project5/activities.html
@@ -62,6 +62,10 @@
 
 <header class="banner">
   <h1>Aruba Vacation Guide</h1>
+  <div class="weather-info">
+    <p class="temperature"></p>
+    <p class="condition"></p>
+  </div>
   <nav>
     <ul class="nav-links">
       <li><a href="home.html">Home</a></li>
@@ -77,15 +81,44 @@
   <div class="section">
     <h2>Activities and Adventures:</h2>
     <p>Snorkeling and Diving: Explore vibrant coral reefs and sunken shipwrecks teeming with marine life.<br>
-    Windsurfing and Kitesurfing: Take advantage of Aruba's perfect wind conditions at Palm Beach.<br>
-    Hiking: Discover the island's rugged terrain and breathtaking views in Arikok National Park.</p>
+      Windsurfing and Kitesurfing: Take advantage of Aruba's perfect wind conditions at Palm Beach. Rentals for beach equipment can generally be found on the beach near the hotels.<br>
+    Hiking: Discover the island's rugged terrain and breathtaking views in Arikok National Park.<br>
+    <br>
+    For booking activities such as snorkeling and diving, consider using TripAdvisor. It's a popular platform for finding and booking various excursions and tours. You can explore a wide range of options and read reviews from other travelers to make informed decisions. Take a look on TripAdvisor for activities and adventures in Aruba <a href="https://www.tripadvisor.com/Attractions-g147247-Activities-c42-Aruba.html">here</a>.</p>
   </div>
   
-  <div class="section">
-    <h2>Local Cuisine:</h2>
-    <p>Aruba's dining landscape mirrors its multicultural heritage with a wide array of international cuisines. From Dutch treats and French gourmet delights to robust Italian dishes and traditional German fare, the island caters to every palate. This culinary diversity is complemented by the freshest seafood, offering a dining experience that's as varied and vibrant as Aruba itself. Whether you're in the mood for elegant dining or cozy beachside eateries, the island's restaurants promise an unforgettable culinary journey.
-        </p>
+<div class="section">
+  <h2>Local Cuisine:</h2>
+  <p>Aruba's dining landscape mirrors its multicultural heritage with a wide array of international cuisines. From Dutch treats and French gourmet delights to robust Italian dishes and traditional German fare, the island caters to every palate. This culinary diversity is complemented by the freshest seafood, offering a dining experience that's as varied and vibrant as Aruba itself. Whether you're in the mood for elegant dining or cozy beachside eateries, the island's restaurants promise an unforgettable culinary journey.</p>
+  <p>Many restaurants in Aruba use the OpenTable app for convenient table reservations. While some restaurants may require direct booking through their website, you can find and book most restaurants on OpenTable. Browse through a variety of dining options and reserve your table hassle-free.</p>
+  
+  <div class="download-container">
+ 
+    <img src="opentable.png" alt="OpenTable Logo" style="height: 100px;">
+
+   
+    <a href="https://apps.apple.com/us/app/opentable/id296581815" target="_blank" rel="noopener noreferrer">
+      <img src="download.png" alt="Download OpenTable App" style="width: 100px; height: auto;">
+    </a>
   </div>
+</div>
+
+<style>
+  
+  .download-container {
+    display: flex; 
+    align-items: center; 
+    margin-top: 10px; 
+  }
+
+  
+  .download-container img:first-child {
+    margin-right: 10px; 
+  }
+</style>
+
+
+
   
   <div class="section">
     <h2>Nightlife and Entertainment:</h2>
@@ -96,6 +129,27 @@
 <footer>
   © 2024 Jaywei Chang - Aruba Vacation Guide. All rights reserved.
 </footer>
+
+
+<script>
+  
+  function fetchWeather() {
+    fetch('https://api.weatherapi.com/v1/current.json?key=7cda4e6248e744469fb194223240505&q=Oranjestad&aqi=no')
+      .then(response => response.json())
+      .then(data => {
+        const temperature = data.current.temp_f;
+        const condition = data.current.condition.text;
+
+        
+        document.querySelector('.temperature').textContent = `Temperature: ${temperature}°F`;
+        document.querySelector('.condition').textContent = `Condition: ${condition}`;
+      })
+      .catch(error => console.error('Error fetching weather data:', error));
+  }
+
+  
+  window.onload = fetchWeather;
+</script>
 
 </body>
 </html>
