--- a/project5/planyourtrip.html
+++ b/project5/planyourtrip.html
@@ -65,6 +65,11 @@
 
 <header class="banner">
   <h1>Aruba Vacation Guide</h1>
+  
+  <div class="weather-info">
+    <p class="temperature"></p>
+    <p class="condition"></p>
+  </div>
   <nav>
     <ul class="nav-links">
       <li><a href="home.html">Home</a></li>
@@ -79,12 +84,12 @@
   
   <div class="section">
     <h2>Accommodations:</h2>
-    <p>Discover a wide range of accommodations in Aruba, from luxury resorts to charming beachfront villas. Whether you're looking for an all-inclusive experience or a cozy apartment, there's something for every traveler.</p>
+    <p>When planning your stay in Aruba, consider booking directly with the hotel. While third-party booking sites may offer convenience, booking directly often provides additional benefits such as room upgrades, flexible cancellation policies, and special discounts. However, if you're simply browsing your options, a third-party booking site can be a useful tool to explore the available selections. Take a look <a href="https://www.aruba.com/us/plan-your-visit/hotels-and-resorts">here</a> for a comprehensive list of accommodations in Aruba.</p>
   </div>
   
   <div class="section">
     <h2>Transportation:</h2>
-    <p>Getting around Aruba is easy and convenient. Rent a car to explore the island at your own pace, use public transportation for an authentic experience, or book a tour to see the best sights without the hassle.</p>
+    <p>Getting around Aruba is easy and convenient. Consider renting a car from local companies, as they often offer more competitive rates compared to larger chains like Hertz or Enterprise. With your own vehicle, you can explore the island at your own pace. Alternatively, opt for public transportation for an authentic experience, or book a guided tour to discover the best sights hassle-free.</p>
   </div>
   
   <div class="section">
@@ -98,6 +103,27 @@
 <footer>
   © 2024 Jaywei Chang - Aruba Vacation Guide. All rights reserved.
 </footer>
+
+
+<script>
+  
+  function fetchWeather() {
+    fetch('https://api.weatherapi.com/v1/current.json?key=7cda4e6248e744469fb194223240505&q=Oranjestad&aqi=no')
+      .then(response => response.json())
+      .then(data => {
+        const temperature = data.current.temp_f;
+        const condition = data.current.condition.text;
+
+        
+        document.querySelector('.temperature').textContent = `Temperature: ${temperature}°F`;
+        document.querySelector('.condition').textContent = `Condition: ${condition}`;
+      })
+      .catch(error => console.error('Error fetching weather data:', error));
+  }
+
+  
+  window.onload = fetchWeather;
+</script>
 
 </body>
 </html>
